login terminado y logo añadido

--- a/Practica Swing/bin/.gitignore
+++ b/Practica Swing/bin/.gitignore
@@ -2,4 +2,7 @@
 /InicioDeSesion$2.class
 /InicioDeSesion$3.class
 /InicioDeSesion$4.class
-/InicioDeSesion.class
+/InicioDeSesion$5.class
+/Admin/
+/Mecanico/
+/img/
