admin finiquitado y arreglo de login

--- a/Practica Swing/bin/.gitignore
+++ b/Practica Swing/bin/.gitignore
@@ -1,8 +1,9 @@
+/Admin/
+/ConexionMySQL.class
 /InicioDeSesion$1.class
 /InicioDeSesion$2.class
 /InicioDeSesion$3.class
 /InicioDeSesion$4.class
 /InicioDeSesion$5.class
-/Admin/
 /Mecanico/
 /img/
